style: 💄 fix lint erros

--- a/packages/components/Flatlist/components/fixture.html
+++ b/packages/components/Flatlist/components/fixture.html
@@ -54,11 +54,11 @@
         this.set({
           fixture: {
             ...fixture,
-            props
-          }
-        })
+            props,
+          },
+        });
       },
-    }
+    },
   };
 </script>
 
