fix: 🐛 isObject import

--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -110,6 +110,7 @@
 
 <script>
   import { getStyles, getAlignClass, shouldReturnComponent } from './helpers.js';
+  import isObject from './utils/isObject.js';
 
   export default {
     components: {
