--- a/packages/pos/simulator/view/pos/POS.html
+++ b/packages/pos/simulator/view/pos/POS.html
@@ -10,7 +10,6 @@
 </div>
 
 <script>
-  import { Registry } from '../../index.js';
   import store from './store.js';
 
   export default {
@@ -57,6 +56,13 @@
       width: 508px;
       height: 815px;
       background-image: url(./assets/MP35P.png);
+    }
+
+    .MP35,
+    .shadow-MP35 {
+      width: 440px;
+      height: 810px;
+      background-image: url(./assets/MP35.png);
     }
 
     .D195,
