--- a/packages/pos/simulator/view/pos/hardware/Printer.html
+++ b/packages/pos/simulator/view/pos/hardware/Printer.html
@@ -219,6 +219,11 @@
     bottom: 620px;
   }
 
+  :global(.MP35 .printer) {
+    left: 85px;
+    bottom: 620px;
+  }
+
   :global(.D195 .printer) {
     left: 85px;
     bottom: 620px;
