--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -113,6 +113,15 @@
       height: 240px;
     }
 
+    :global(.MP35 .screen) {
+      top: 170px;
+      left: 65px;
+      border-radius: 2px;
+      width: 320px;
+      height: 240px;
+      outline: 2px solid #54545438;
+    }
+
     :global(.D195 .screen) {
       top: 202px;
       left: 87px;
