--- a/packages/pos/simulator/view/pos/panels/Models.html
+++ b/packages/pos/simulator/view/pos/panels/Models.html
@@ -20,7 +20,13 @@
     store: () => store,
     data() {
       return {
-        MODELS: [MODELS.S920, MODELS.MP35P, MODELS.D195, MODELS.D199],
+        MODELS: [
+          MODELS.S920,
+          MODELS.MP35P,
+          MODELS.MP35,
+          MODELS.D195,
+          MODELS.D199,
+        ],
       };
     },
     methods: {
