--- a/packages/pos/simulator/view/pos/Wrapper.html
+++ b/packages/pos/simulator/view/pos/Wrapper.html
@@ -95,6 +95,12 @@
       padding-top: 32px;
     }
 
+    .container.MP35 {
+      height: 1000px;
+      align-items: initial;
+      padding-top: 32px;
+    }
+
     .container.D195 {
       height: 1000px;
       align-items: initial;
